--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="title">Hari Yadav</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('assets/resume.png')">
                     Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </section>
-    
+
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
@@ -53,7 +53,8 @@
             <div class="about-details-container">
                 <div class="text-container" style="margin-top: 50px;">
                     <p><span class="purple">Name&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Hari Yadav</p><br>
-                    <p><span class="purple">Position&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Front-End Development</p><br>
+                    <p><span class="purple">Position&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Front-End Development
+                    </p><br>
                     <p><span class="purple">Address&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Nepal , Itahari</p><br>
                 </div>
                 <div class="text-container">
@@ -96,17 +97,20 @@
         <div class="outer">
             <div class="project">
                 <img src="assets/project-img-1.jpg" alt="">
-                <a href="/Side Project/Rock Paper Scissor/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
+                <a href="/Side Project/Rock Paper Scissor/index.html" target="_blank"><i
+                        class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
                 <div class="bottom">Rock Paper Scissor</div>
             </div>
             <div class="project">
                 <img src="assets/project-img-2.jpg" alt="">
-                <a href="/Side Project/Product Search/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
+                <a href="/Side Project/Product Search/index.html" target="_blank"><i
+                        class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
                 <div class="bottom">Search Products</div>
             </div>
             <div class="project">
                 <img src="assets/project-img-3.png" style="object-fit: contain;background-color: aquamarine;">
-                <a href="/Side Project/Text To Voice/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
+                <a href="/Side Project/Text To Voice/index.html" target="_blank"><i
+                        class="fa-solid fa-arrow-up-right-from-square fa-xl"></i></a>
                 <div class="bottom">Text To Speech</div>
             </div>
         </div>
@@ -118,9 +122,10 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-                <p><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwQMBgnxqHdHFLVhgDFCSrqFbVVtsQCcztVJkcrRBbgStNrJXKzlsFRnBHZJjCDnGfVbKDr" target="_blank">Example@gmail.com</a></p>
+                <p><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwQMBgnxqHdHFLVhgDFCSrqFbVVtsQCcztVJkcrRBbgStNrJXKzlsFRnBHZJjCDnGfVbKDr"
+                        target="_blank">Example@gmail.com</a></p>
             </div>
-            
+
         </div>
     </section>
     <footer>
