--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://kit.fontawesome.com/98a8318835.js" crossorigin="anonymous"></script>
 </head>
 
@@ -34,7 +35,7 @@
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('assets/resume.png')">
-                    Download CV
+                    Open Resume
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
                     Contact Info
@@ -51,7 +52,7 @@
                 <img src="assets/pic-2.png" alt="Profile picture" class="about-pic" />
             </div>
             <div class="about-details-container">
-                <div class="text-container" style="margin-top: 50px;">
+                <div class="text-container">
                     <p><span class="purple">Name&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Hari Yadav</p><br>
                     <p><span class="purple">Position&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Front-End Development
                     </p><br>
