--- a/index.html
+++ b/index.html
@@ -75,19 +75,20 @@
         <h1 class="title">Services</h1>
         <div class="outer">
             <div class="card">
-                <h3>HTML</h3>
-                <p> HTML is the standard markup language for creating Web pages. HTML describes the structure of a Web
-                    page.</p>
+                <i class="fa-sharp fa-solid fa-user fa-2xl"></i>
+                <h3>UI/UX Design</h3>
+                <p> UI/UX design aim to create visually appealing and intuitively
+                    functional digital interfaces.</p>
             </div>
             <div class="card">
-                <h3>CSS</h3>
-                <p>CSS is used to define styles for your web pages, including the design, layout and variations in
-                    display for different devices and screen sizes.</p>
+                <i class="fa-solid fa-code fa-2xl"></i>
+                <h3>Web Design</h3>
+                <p>Transforming ideas into engaging and intuitive digital experiences through web design.</p>
             </div>
             <div class="card">
-                <h3>JS</h3>
-                <p>JavaScript is a scripting language that enables you to create dynamically updating content, control
-                    multimedia, animate images,etc</p>
+                <i class="fa-solid fa-tablet-screen-button fa-2xl"></i>
+                <h3>Mobile Applications</h3>
+                <p>Designing and developing mobile apps for seamless user experiences and functionality</p>
             </div>
         </div>
     </section>
