--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="title">Hari Yadav</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('assets/resume.png')">
+                <button class="btn btn-color-2" onclick="window.open('assets/resume.pdf')">
                     Open Resume
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
