--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Hari Yadav</h1>
-            <p class="section__text__p2">Frontend Developer</p>
+            <p class="section__text__p2">FullStack Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('assets/resume.pdf')">
-                    Open Resume
+                    Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
                     Contact Info
@@ -52,7 +52,7 @@
                 <img src="assets/pic-2.png" alt="Profile picture" class="about-pic" />
             </div>
             <div class="about-details-container">
-                <div class="text-container">
+                <div class="text-container" style="margin-top: 50px;">
                     <p><span class="purple">Name&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Hari Yadav</p><br>
                     <p><span class="purple">Position&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;&nbsp;</span>Front-End Development
                     </p><br>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Hi, I'm Hari Yadav! I'm a front-end developer in Nepal, Itahari. My
+                        Hi, I'm Hari Yadav! I'm a fullstack developer in Nepal, Itahari. My
                         passion for coding started when I received my first computer at 10 years old, and I haven't
                         looked back since. 20 years later, I'm proud to say that I've created at about more than 300
                         projects ! Check out my
